# ucsb-farm-robotics

./: Dockerfile  README.md
internal-software/: CMakeLists.txt  Makefile  cmake_install.cmake  encoder.cpp  encoder.h  motor.cpp  motor.h  spray.cpp  spray.h
src/spray_vision/: CMakeLists.txt  package.xml
src/spray_vision/include/spray_vision/: camera_capture.hpp  detection.hpp  hailo_inference.hpp
src/spray_vision/src/: camera_capture.cpp  hailo_inference.cpp  spray_detector_node.cpp
src/systems/: package.xml  setup.cfg  setup.py
src/systems/systems/: state_machine.py  watchdog.py
